--- a/Youtube.html
+++ b/Youtube.html
@@ -76,7 +76,7 @@
     <script src="assets/js/vendor/holder.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
         </script>
-        <script src="http://www.youtube.com/iframe_api"></script>
+        <script src="https://www.youtube.com/iframe_api"></script>
     <script src="Youtube/main.js"></script>
     <script src="Youtube/playList.js"></script>
   </body>
